--- a/css/style.css
+++ b/css/style.css
@@ -92,13 +92,13 @@ hr {
 @media screen and (max-width: 425px) and (min-width: 0px) {
 
     .container{
-        margin-top: 100px;
+        /* margin-top: 100px; */
+        display: block;
     }
 
     .title {
-        font-size: 25px;
+        font-size: 26px;
     }
-
 
     .hard-code {
         width: 100%;
@@ -138,14 +138,14 @@ hr {
     .grid {
         display: flex;
         flex-wrap: wrap;
-        width: 650px;
-        margin-left: -10px;
+        width: 450px;
+        margin-left: 20px;
 
     }
 
     .square {
-        height: 80px;
-        width: 80px;
+        height: 120px;
+        width: 120px;
         background-color: rgba(255, 255, 255, 0.938);
         border: 1px solid rgb(150, 146, 146);
     }
