--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,27 @@ hr {
     font-size: 50px;
 }
 
+.buttons{
+    color: white;
+    cursor: pointer;
+    /* background-color: #fff; */
+    font-size: 30px;
+    padding: 10px;
+    margin: 10px;
+    display: flex;
+    text-align: center;
+}
+.start{
+    width: 50%;
+    padding: 10px;
+    margin: 10px;
+    border-right: 1px solid white;
+}
+.stop{
+    width: 50%;
+    padding: 10px;
+    margin: 10px;
+}
 /* 
 // Media queries */
 
@@ -159,9 +180,7 @@ hr {
 }
 
 @media screen and (max-width: 768px) and (min-width: 426px) {
-    .container{
-        margin-top: 100px;
-    }
+    
 
     .title {
         font-size: 28px;
@@ -225,10 +244,7 @@ hr {
     }
   }
 @media screen and (max-width: 1024px) and (min-width: 769px) {
-    .container{
-        margin-top: 100px;
-    }
-
+    
     .title {
         font-size: 28px;
     }
