--- a/css/style.css
+++ b/css/style.css
@@ -90,6 +90,9 @@ span {
 }
 #res{
     color: black;
+    font-size: 30px;
+    font-weight: 900;
+
 }
 
 .buttons{
@@ -104,19 +107,21 @@ span {
 .start{
     width: 50%;
     padding: 10px;
-    border-right: 1px solid white;
+    /* border-right: 1px solid white; */
+    background-color: rgb(15, 214, 15);
 }
 .start:hover{
     
-    background-color: #1414146e;
+    background-color: green;
 }
 .stop{
     width: 50%;
+    background-color: red;
     padding: 10px;
 }
 .stop:hover{
     
-    background-color: #1414146e;
+    background-color: rgb(187, 1, 1);
 }
 /* 
 // Media queries */
@@ -150,14 +155,16 @@ span {
     .second {
         padding: 5px;
     }
+.second .left{
+    font-size: 25px;
 
+}
     span {
         font-weight: 200;
         font-size: 20px;
     }
     .left {
         color: lightgreen;
-        font-size: 15px;
     }
 
     #secs {
@@ -166,6 +173,12 @@ span {
 
     #score {
         font-size: 20px;
+    }
+    #res{
+        color: black;
+        font-size: 30px;
+        font-weight: 900;
+    
     }
 
     .grid {
